<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Roulette"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <com.bluehomestudio.luckywheel.LuckyWheel
                android:id="@+id/roulette"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerInParent="true"
                app:background_color="@android:color/white"/>

        </LinearLayout>
        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/spinBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roulette"
            android:background="@drawable/round_btn"
            android:text="돌리기"
            android:textColor="@android:color/white"
            android:textSize="25sp"/>
    </LinearLayout>


    <!--  Bottom  -->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.widget.Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textSize="@dimen/R20"
            android:text="@string/bar_foodBtn"
            android:background="@drawable/bar_btn_notcheck"
            android:id="@+id/bar_foodBtn"
            android:textColor="@color/black.200"/>
        <android.widget.Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textSize="@dimen/R20"
            android:text="@string/bar_popularBtn"
            android:background="@drawable/bar_btn_notcheck"
            android:id="@+id/bar_bestBtn"
            android:textColor="@color/black.200"/>
        <android.widget.Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textSize="@dimen/B24"
            android:text="@string/bar_rouletteBtn"
            android:background="@drawable/bar_btn_check"
            android:id="@+id/bar_rouletteBtn"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>