<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/tools"
    android:backgroundTint="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        custom:context=".YourActivityName">

        <ScrollView
            android:scrollbars="none"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/search_bg"
                    app:iconifiedByDefault="false"
                    app:queryBackground="@android:color/transparent"
                    app:queryHint="음식 이름, 해시태그 등으로 검색..." />

                <GridLayout
                    android:foregroundGravity="center"
                    android:id="@+id/radioGrid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="4"
                    android:rowCount="2"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <RadioButton
                        android:id="@+id/korFoodBtn"
                        android:checked="true"
                        android:background="@drawable/unselected_background"
                        android:button="@null"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/search_food_1"
                        android:textSize="@dimen/R16"/>

                    <RadioButton
                        android:background="@drawable/unselected_background"
                        android:button="@null"
                        android:textAlignment="center"
                        android:id="@+id/japFoodBtn"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/black.400"
                        android:text="@string/search_food_2"
                        android:textSize="@dimen/R16" />

                    <RadioButton
                        android:background="@drawable/unselected_background"
                        android:button="@null"
                        android:textAlignment="center"
                        android:id="@+id/chiFoodBtn"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:textColor="@color/black.400"
                        android:layout_marginRight="10dp"
                        android:text="@string/search_food_3"
                        android:textSize="@dimen/R16" />

                    <RadioButton
                        android:background="@drawable/unselected_background"
                        android:button="@null"
                        android:textAlignment="center"
                        android:id="@+id/wesFoodBtn"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:text="@string/search_food_4"
                        android:textColor="@color/black.400"
                        android:textSize="@dimen/R16" />
                    <RadioButton
                        android:background="@color/white"
                        android:button="@null"
                        android:layout_width="65dp"
                        android:layout_height="35dp" />

                    <RadioButton
                        android:background="@drawable/unselected_background"
                        android:button="@null"
                        android:textAlignment="center"
                        android:id="@+id/snackBtn"
                        android:layout_width="65dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/search_food_5"
                        android:textColor="@color/black.400"
                        android:textSize="@dimen/R16"
                        custom:layout_row="1"
                        custom:layout_column="1"/>

                    <RadioButton
                        android:background="@drawable/unselected_background"
                        android:button="@null"
                        android:textAlignment="center"
                        android:id="@+id/dessertBtn"
                        android:layout_width="65dp"
                        android:layout_marginTop="10dp"
                        android:layout_height="35dp"
                        android:text="@string/search_food_6"
                        android:textColor="@color/black.400"
                        android:textSize="@dimen/R16"
                        custom:layout_row="1"
                        custom:layout_column="2"/>

                </GridLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/foodText"
                            android:layout_marginRight="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_food_1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/M24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/top3"
                            android:textColor="@color/black"
                            android:textSize="@dimen/M24" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginRight="10dp"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:elevation="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_btn"
                        android:drawableTop="@drawable/image_resize"
                        android:gravity="center"
                        android:text="@string/chicken"
                        android:textColor="@color/black" />


                    <TextView
                        android:layout_marginRight="10dp"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:elevation="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_btn"
                        android:drawableTop="@drawable/image_resize"
                        android:gravity="center"
                        android:text="@string/chicken"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:elevation="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_btn"
                        android:drawableTop="@drawable/image_resize"
                        android:gravity="center"
                        android:text="@string/chicken"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="140dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginBottom="20dp"
                        android:foregroundGravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="180dp">

                        <TextView
                            android:layout_marginRight="10dp"
                            android:layout_width="0dp"
                            android:layout_height="175dp"
                            android:elevation="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_btn"
                            android:drawableTop="@drawable/image_resize_big"
                            android:gravity="center"
                            android:text="@string/chicken"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="175dp"
                            android:elevation="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_btn"
                            android:drawableTop="@drawable/image_resize_big"
                            android:gravity="center"
                            android:text="@string/chicken"
                            android:textColor="@color/black" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginBottom="20dp"
                        android:foregroundGravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="180dp">

                        <TextView
                            android:layout_marginRight="10dp"
                            android:layout_width="0dp"
                            android:layout_height="175dp"
                            android:elevation="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_btn"
                            android:drawableTop="@drawable/image_resize_big"
                            android:gravity="center"
                            android:text="@string/chicken"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="175dp"
                            android:elevation="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_btn"
                            android:drawableTop="@drawable/image_resize_big"
                            android:gravity="center"
                            android:text="@string/chicken"
                            android:textColor="@color/black" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_marginBottom="45dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@drawable/upper_shadow_todo">
        </View>
        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <android.widget.Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textSize="@dimen/R20"
                android:text="@string/bar_foodBtn"
                android:background="@drawable/bar_btn_notcheck"
                android:id="@+id/bar_foodBtn"
                android:textColor="@color/black.200"/>

            <android.widget.Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textSize="@dimen/B24"
                android:text="@string/bar_popularBtn"
                android:background="@drawable/bar_btn_check"
                android:id="@+id/bar_bestBtn"
                android:textColor="@color/white"/>

            <android.widget.Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textSize="@dimen/R20"
                android:text="@string/bar_rouletteBtn"
                android:background="@drawable/bar_btn_notcheck"
                android:id="@+id/bar_rouletteBtn"
                android:textColor="@color/black.200"/>
        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/idFABAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginVertical="80dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="bottom|end"
            android:background="@color/purple_200"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/purple_200"
            app:tint="@color/white"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>




</LinearLayout>
