<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!--  header  -->
    <ScrollView
        android:scrollbars="none"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="최근 먹었던 음식"
                    android:textSize="@dimen/M24"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <LinearLayout
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_bg"
                    android:orientation="vertical"
                    android:layout_width="100dp"
                    android:layout_height="120dp">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:background="@drawable/round_btn"
                        android:drawableTop="@drawable/image_resize"
                        android:gravity="center"
                        android:text="@string/chicken" />

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_bg"
                    android:orientation="vertical"
                    android:layout_width="100dp"
                    android:layout_height="120dp">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:background="@drawable/round_btn"
                        android:drawableTop="@drawable/image_resize"
                        android:gravity="center"
                        android:text="@string/chicken" />

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:elevation="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_bg"
                    android:orientation="vertical"
                    android:layout_width="100dp"
                    android:layout_height="120dp">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:background="@drawable/round_btn"
                        android:drawableTop="@drawable/image_resize"
                        android:gravity="center"
                        android:text="@string/chicken" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_marginBottom="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="좋아하는 음식"
                        android:textSize="@dimen/M24"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:text="더보기>"
                        android:layout_gravity="center|right"
                        android:textSize="@dimen/R13"
                        android:textColor="@color/mainColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_height="100dp"
                        android:background="@color/white"
                        android:elevation="5dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardBackgroundView"
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:background="@drawable/round_btn"
                                android:src="@drawable/image_resize" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="10dp"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textSize="@dimen/R20"
                                android:textColor="@color/mainColor"
                                android:text="@string/chicken"
                                android:layout_marginBottom="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:textSize="@dimen/R14"
                                android:textColor="@color/black"
                                android:text="@string/tag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>




            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <View
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@drawable/upper_shadow_todo">
    </View>
    <!--  Bottom  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.widget.Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textSize="@dimen/B24"
            android:text="@string/bar_foodBtn"
            android:background="@drawable/bar_btn_check"
            android:id="@+id/bar_foodBtn"
            android:textColor="@color/white"/>
        <android.widget.Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textSize="@dimen/R20"
            android:text="@string/bar_popularBtn"
            android:background="@drawable/bar_btn_notcheck"
            android:id="@+id/bar_bestBtn"
            android:textColor="@color/black.200"/>

        <android.widget.Button
            android:id="@+id/bar_rouletteBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bar_btn_notcheck"
            android:text="@string/bar_rouletteBtn"
            android:textColor="@color/black.200"
            android:textSize="@dimen/R20" />
    </LinearLayout>

</LinearLayout>
